2002-06-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (toplevel): Stricten the pattern to detect w3m version.
	(w3m-info-like-map): Changed key bindings of `w3m-shift-left' and
	`w3m-shift-right'.

2002-06-25  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-use-ange-ftp): Chenged its default value to nil.

2002-06-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-w3m-retrieve-1): Specify -no-cookie option only when 
	the w3m command is configured to accept it.

2002-06-03  Hidetaka Iwai <tyuyu@mb6.seikyou.ne.jp>

	* sb-texfaq.el (shimbun-texfaq-group-path-alist): Fix path
	to get latest articles.

2002-06-20  Yuuichi Teranishi  <teranisi@gohome.org>

	* octet.el (octet-type-filter-alist): Fixed parenthesis.
	(octet-filter-call1, octet-filter-call2, octet-filter-call2-extra):
	Enclose call-process with as-binary-process.

2002-05-31  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* octet.el (octet-find-file): Bind `buffer-read-only', only while
	calling `octet-buffer'.	

2002-06-20  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Release emacs-w3m-1.2.8 from emacs-w3m-1_2 branch.

2002-06-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-bug.el: Require `w3m-e19' for Emacs 19 to be able to compile
	this module alone.

2002-06-18  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mailarc.el: New file.

	* shimbun/sb-quickml.el: Ditto.

2002-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-search.el (w3m-search): Don't extract a default word from
	the header line.

2002-06-18  NOKUBI Takatsugu  <knok@daionet.gr.jp>

	* shimbun/sb-marc-aims.el: New file.

2002-06-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-header-line-insert): Use the property `keymap'
	instead of `local-map' for the recent Emacsen; add a help echo;
	fix a typo.

	* w3m-xmas.el (w3m-setup-header-line): Remove.

2002-06-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-e19.el: Remove many emulating functions on the condition