@@ -4786,8 +4786,12 @@ If EMPTY is non-nil, the created buffer has empty content."
     (define-key map "?" 'describe-mode)
     (define-key map ">" 'w3m-scroll-left)
     (define-key map "<" 'w3m-scroll-right)
-    (define-key map [S-right] 'w3m-shift-left)
-    (define-key map [S-left] 'w3m-shift-right)
+    (if (featurep 'xemacs)
+	(progn
+	  (define-key map [(shift right)] 'w3m-shift-left)
+	  (define-key map [(shift left)] 'w3m-shift-right))
+      (define-key map [S-right] 'w3m-shift-left)
+      (define-key map [S-left] 'w3m-shift-right))
     (define-key map "\M-l" 'w3m-horizontal-recenter)
     (define-key map "\C-a" 'w3m-beginning-of-line)
     (define-key map "\C-e" 'w3m-end-of-line)
